[gd_scene load_steps=6 format=3 uid="uid://4acpdbofrb1k"]

[ext_resource type="Script" path="res://UI/tutorial_icons.gd" id="1_2ncgk"]

[sub_resource type="Animation" id="Animation_6nts3"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0hf7i"]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_h5alh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdl5g"]
_data = {
"Hide": SubResource("Animation_0hf7i"),
"RESET": SubResource("Animation_h5alh"),
"Show": SubResource("Animation_6nts3")
}

[node name="TutorialIcon" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_2ncgk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TutorialIcons")
libraries = {
"": SubResource("AnimationLibrary_xdl5g")
}

[node name="TutorialIcons" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="TutorialIcons"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TutorialIcons/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.95
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Test"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
